# proyecto_mlops_equipo_56_fase_2

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.dvc/: config
docs/: mkdocs.yml
docs/docs/: index.md
mlops_project/: Hyperparameter_tuning.ipynb  dataset_generator.ipynb  logging_first_model.ipynb  logging_first_model_4.ipynb  test_deployment.ipynb
mlops_project/mlruns/0/: meta.yaml
mlruns/0/: meta.yaml
mlruns/170812052163285550/: meta.yaml
mlruns/170812052163285550/118966cc03434ce7b65328a9df8bca2a/: meta.yaml
mlruns/170812052163285550/17c7f4220c26401bbe50c91a158c5fcc/: meta.yaml
mlruns/170812052163285550/1de54158faf245879467284f60424495/: meta.yaml
mlruns/170812052163285550/253be134fa6545b584805c9e7c6c4166/: meta.yaml
mlruns/170812052163285550/27244a5d543a4a25a2139a064d6673e3/: meta.yaml
mlruns/170812052163285550/2dccadc709014c979e7dd04030de10c3/: meta.yaml
mlruns/170812052163285550/2f026b2f525a4f61a8d0a30ac1a5f1e3/: meta.yaml
mlruns/170812052163285550/415ab01acd2f46dc9eee47c3fd67d8bc/: meta.yaml
mlruns/170812052163285550/44ccf461349546d7914317b66db0321c/: meta.yaml
mlruns/170812052163285550/4cdc7d0a13ee4f8d963aead7a5aba922/: meta.yaml
mlruns/170812052163285550/4fc3d9f2620049b3be27261ed0df5007/: meta.yaml
mlruns/170812052163285550/583157f0027b478a80f95f1b5eb741f7/: meta.yaml
mlruns/297784242467499909/: meta.yaml
mlruns/415594987185625826/: meta.yaml
mlruns/562412500034682140/: meta.yaml
mlruns/948575642093280685/: meta.yaml
mlruns/949336631635848333/: meta.yaml
mlruns/models/wine-quality-predictor/: meta.yaml
(+716 files in other folders)
